# rust-pg

./: Cargo.toml  README.md  diesel.toml
migrations/2024-07-17-174721_create_books/: up.sql
migrations/2024-07-17-174754_create_pages/: down.sql  up.sql
migrations/2024-07-17-175658_create_authors/: up.sql
migrations/2024-07-17-175705_create_books_authors/: up.sql
migrations/2024-07-17-194540_create_address/: up.sql
migrations/2024-07-25-140226_create_item/: up.sql
migrations/2024-07-25-140406_create_report/: up.sql
migrations/2024-07-29-153304_create_invite/: up.sql
src/: debug_query.rs  diesel_jsonb.rs  lib.rs  main.rs  models.rs  pagination.rs  schema.rs
