[package]
name = "rust-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.1", features = ["postgres", "serde_json"] }
dotenvy = "0.15.7"
rand = "0.9.0-alpha.1"
serde = "1.0.204"
serde_json = "1.0.121"
